# docagent-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: paper.md
eval/: README.md  sample_eval.jsonl
example_data/: notes.md  sample.txt
example_data/notion_export/: Home.md
example_data/notion_export/People/: John Bowlby.md
example_data/notion_export/Projects/: Context Folding RL.md
scripts/: mlx_lora_smoke.sh  smoke.sh
src/docagent/: __init__.py  cli.py  config.py
src/docagent/chat/: llm.py  rag.py
src/docagent/eval/: metrics.py  run_eval.py
src/docagent/graph/: __init__.py  build.py  extract.py  query.py  sqlite_graph.py
src/docagent/index/: build.py  embedder.py  retriever.py  sqlite_store.py  vector_store.py
src/docagent/ingest/: markdown.py  pdf.py  runner.py  utils.py
src/docagent/web/: __init__.py  server.py
src/docagent/web/static/: app.js  styles.css
src/docagent/web/static/fonts/: README.md
src/docagent/web/templates/: index.html
tests/: test_fts_query.py  test_graph_extract.py
